--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <title>Xiaomi Smart Air Purifier 4 Lite - Xiaomi Global Official</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
     <link href="https://s01.appmifile.com/sgp/spps_files/product/2.1.23/pc/xiaomi-smart-air-purifier-4-lite/css/main.css" rel="stylesheet">
     
 
@@ -23,7 +22,7 @@
 <div class="overview-con">
 <div class="  lazy" data-type="bg" data-id="daf12df2ds" data-background-image="" style="width:100%;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;flex-direction:column;background:#fff;padding:unset;margin:unset">
 
-<div class="  lazy" data-type="bg" data-id="9a98239751" data-background-image="./assets/media/01.jpg"  style="width:10rem;background-color:#fff;box-sizing:border-box;background-size:cover;background-repeat:no-repeat;position:relative;min-height:0.78125rem;background-image:url(./assets/media/01.jpg);height:4.9453125rem;display:block">
+<div class="  lazy" data-type="bg" data-id="9a98239751" data-background-image="./assets/media/01.jpg" style="width:10rem;background-color:#fff;box-sizing:border-box;background-size:cover;background-repeat:no-repeat;position:relative;min-height:0.78125rem;background-image:url(./assets/media/01.jpg);height:4.9453125rem;display:block">
 
 <div class="  lazy" data-type="bg" data-id="9d01141995" data-background-image="" style="width:5.859375rem;height:auto;box-sizing:border-box;display:block;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;margin:0rem 0rem 0rem 1.90625rem;padding:0.84765625rem 0rem 0rem 0rem">
 
@@ -61,8 +60,6 @@
 <div class="  lazy" data-type="bg" data-id="c16dbb7928" data-background-image="./assets/media/img01.png" style="width:2.21875rem;height:1.6953125rem;box-sizing:border-box;display:block;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;background-image:url(./assets/media/img01.png)">
 
 <div class="  lazy" data-type="bg" data-id="ee9ed6ea00" data-background-image="" style="width:auto;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;align-items:baseline;margin:0.9rem 0rem 0rem 0.171875rem">
-
-<span data-key="ksp_6" class="xm-text f-regular " data-type="text"  data-id="a28eb1e1a4" style="color:#ffffff;font-size:0.1171875rem;display:inline-block;text-align:left;width:100%;line-height:1.2">Retém até</span>
 
 <span data-key="ksp_4" class="xm-text f-regular " data-type="text" data-id="fca70a31ba" style="color:#ffffff;font-size:0.28125rem;display:inline;text-align:left;width:max-content;line-height:1.2">99.97</span>
 
@@ -137,9 +134,9 @@ partículas de 0,3μm*</span>
 
 <div class="  lazy" data-type="bg" data-id="942066c604" data-background-image="./assets/media/bolhas.png" style="width:6.78515625rem;height:3.453125rem;box-sizing:border-box;display:block;position:relative;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;background-image:url(./assets/media/bolhas.png);padding:0rem 0rem 0rem 0.00390625rem;margin:0.328125rem 0rem 0rem 0rem">
 
-<span data-key="overview_9" class="xm-text  " data-type="text" data-id="747c954ddc" style="color:#ffffff;font-size:0.1171875rem;display:inline-block;text-align:center;width:0.6rem;position:absolute;top:2.0703125rem;left:0.597rem;line-height:1.2">Odores dos pets</span>
+<span data-key="overview_9" class="xm-text  " data-type="text" data-id="747c954ddc" style="color:#ffffff;font-size:0.1171875rem;display:inline-block;text-align:center;width:0.6rem;position:absolute;top:2.0703125rem;left:0.62rem;line-height:1.2">Odores dos pets</span>
 
-<span data-key="overview_8" class="xm-text  " data-type="text" data-id="c11aa81b20" style="color:#ffffff;font-size:0.1171875rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:01.7203125rem;left:1.853125rem;line-height:1.2">Produtos Quimicos</span>
+<span data-key="overview_8" class="xm-text  " data-type="text" data-id="c11aa81b20" style="color:#ffffff;font-size:0.1171875rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:1.75rem;left:1.92rem;line-height:1.2">Produtos Quimicos</span>
 
 <span data-key="overview_7" class="xm-text  " data-type="text" data-id="cd7d242da0" style="color:#ffffff;font-size:0.09375rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:2.3rem;left:5.2734375rem;line-height:1.2">Células mortas</span>
 
@@ -149,9 +146,9 @@ partículas de 0,3μm*</span>
 
 <span data-key="overview_4" class="xm-text  " data-type="text" data-id="1cb7080d5f" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:1.859375rem;left:3.8046875rem;line-height:1.2">Pólen</span>
 
-<span data-key="overview_3" class="xm-text  " data-type="text" data-id="853c96750b" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:2.7734375rem;left:2.40625rem;line-height:1.2">Pelos de pets</span>
+<span data-key="overview_3" class="xm-text  " data-type="text" data-id="853c96750b" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:2.70rem;left:2.40625rem;line-height:1.2">Pelos de pets</span>
 
-<span data-key="overview_2" class="xm-text  " data-type="text" data-id="c120e3bc47" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:center;width:0.2rem;position:absolute;top:0.68125rem;left:1.921875rem;line-height:1.2">Odores da cozinha</span>
+<span data-key="overview_2" class="xm-text  " data-type="text" data-id="c120e3bc47" style="color:#ffffff;font-size:0.110rem;display:inline-block;text-align:center;width:0.6rem;position:absolute;top:0.78rem;left:1.85rem;line-height:1.2">Odores da cozinha</span>
 </div>
 </div>
 
@@ -204,7 +201,7 @@ fornecendo 6000L de ar puro por minuto*. Os poderosos níveis de velocidades de 
 
 <img style="display:block;height:0.4140625rem;width:0.4140625rem;background-color:transparent;margin:0rem 0rem 0rem 0.00390625rem" class="  lazy" data-id="134da1a344" src="./assets/media/icon01.png" />
 
-<span data-key="overview_21" class="xm-text f-light " data-type="text" data-id="eef6c363c4" style="color:#181818cc;font-size:0.1171875rem;display:inline-block;text-align:center;width:100%;line-height:1.3;margin:0.109375rem 0rem 0rem 0rem">Pelos de pet</span>
+<span data-key="overview_21" class="xm-text f-light " data-type="text" data-id="eef6c363c4" style="color:#181818cc;font-size:0.15rem;display:inline-block;text-align:center;width:100%;line-height:1.0;margin:0.3rem 0rem 0rem 0rem;">Pelos de pet</span>
 </div>
 
 <div class="  lazy" data-type="bg" data-id="69385c972e" data-background-image="" style="width:1.015625rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;flex-direction:column;align-items:center">
@@ -216,7 +213,7 @@ fornecendo 6000L de ar puro por minuto*. Os poderosos níveis de velocidades de 
 
 <div class="  lazy" data-type="bg" data-id="34ed9ab04c" data-background-image="" style="width:1.015625rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;flex-direction:column;align-items:center">
 
-<img style="display:block;height:0.4140625rem;width:0.4140625rem;background-color:transparent;margin:0rem 0rem 0rem 0.00390625rem" class="  lazy" data-id="86dbda8c7c" src="./assets/media/img03.png" />
+<img style="display:block;height:0.4140625rem;width:0.4140625rem;background-color:transparent;margin:0rem 0rem 0rem 0.00390625rem" class="  lazy" data-id="86dbda8c7c" src="./assets/media/icon03.png" />
 
 <span data-key="overview_23" class="xm-text f-light " data-type="text" data-id="605fde59a9" style="color:#181818cc;font-size:0.1171875rem;display:inline-block;text-align:center;width:100%;line-height:1.3;margin:0.109375rem 0rem 0rem 0rem">Poeira</span>
 </div>
@@ -232,7 +229,7 @@ fornecendo 6000L de ar puro por minuto*. Os poderosos níveis de velocidades de 
 
 <img style="display:block;height:0.4140625rem;width:0.4140625rem;background-color:transparent;margin:0rem 0rem 0rem 0.00390625rem" class="  lazy" data-id="a20547ee2d" src="./assets/media/icon05.png"/>
 
-<span data-key="overview_25" class="xm-text f-light " data-type="text" data-id="2ecdf507fb" style="color:#181818cc;font-size:0.1171875rem;display:inline-block;text-align:center;width:100%;line-height:1.3;margin:0.109375rem 0rem 0rem 0rem">Células mortas</span>
+<span data-key="overview_25" class="xm-text f-light " data-type="text" data-id="2ecdf507fb" style="color:#181818cc;font-size:2.0rem;display:inline-block;text-align:center;width:100%;line-height:1.3;margin:0.5rem 0rem 0rem 0rem">Células mortas</span>
 </div>
 
 <div class="  lazy" data-type="bg" data-id="6b675637ec" data-background-image="" style="width:1.015625rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;flex-direction:column;align-items:center">
@@ -411,15 +408,15 @@ fornecendo 6000L de ar puro por minuto*. Os poderosos níveis de velocidades de 
 
 <div class="  lazy" data-type="bg" data-id="dbd44ab635" data-background-image="" style="width:5.46875rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;margin:0rem 0.00390625rem;min-width:0.15625rem;align-items:flex-start;justify-content:center;padding:0.3359375rem 0rem 0rem 0rem">
 
-<img style="display:block;height:0.4453125rem;width:1.4140625rem;background-color:transparent;margin:0rem 0.55859375rem 0rem 0rem" class="  lazy" data-id="9112a454b1" src="./assets/media/google.png" />
+<img style="display:block;height:0.553125rem;width:1.4140625rem;background-color:transparent;margin:0rem 0.55859375rem 0rem 0rem" class="  lazy" data-id="9112a454b1" src="./assets/media/google.png" />
 
-<img style="display:block;height:0.4453125rem;width:1.1875rem;background-color:transparent" class="  lazy" data-id="f761f1ea69" src="./assets/media/alexa.png" />
+<img style="display:block;height:0.5453125rem;width:1.3875rem;background-color:transparent" class="  lazy" data-id="f761f1ea69" src="./assets/media/alexa.png" />
 </div>
 </div>
 
 <div class="  lazy" data-type="bg" data-id="310c9b7d6a" data-background-image="" style="width:auto;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;flex-direction:column">
 
-<span data-key="overview_57" class="xm-text f-regular " data-type="text" data-id="c5cf1677ae" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:left;width:2.1484375rem;line-height:1.2;margin:1.5234375rem 0rem 0rem 4.49453125rem">Ok Google, ligar purificador de ar</span>
+<span data-key="overview_57" class="xm-text f-regular " data-type="text" data-id="c5cf1677ae" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:left;width:2.1484375rem;line-height:1.2;margin:1.4rem 0rem 0rem 4.49453125rem">Ok Google, ligar purificador de ar</span>
 
 <span data-key="overview_58" class="xm-text f-regular " data-type="text" data-id="1f6759b200" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:left;width:2.1484375rem;line-height:1.2;margin:0.22265625rem 0rem 0rem 1.8rem">Alexa, desligue o purificador de ar</span>
 </div>
@@ -560,7 +557,7 @@ Dê um toque pessoal à sua casa. </span>
 
 <div class="  lazy" data-type="bg" data-id="85c60c84fa" data-background-image="" style="width:auto;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;flex-direction:column;align-items:center;padding:0rem 0.234375rem 0rem 0rem;justify-content:center">
 
-<img style="display:block;height:2.0703125rem;width:3.28125rem;background-color:transparent" class="  lazy" data-id="51a3ff7841" src="//i02.appmifile.com/873_operator_sg/15/11/2021/b79ee1725ebf7ae223862b3e5b6779cd.png" />
+<img style="display:block;height:2.0703125rem;width:3.28125rem;background-color:transparent" class="  lazy" data-id="51a3ff7841" src="./assets/media/img09.png" />
 
 <span data-key="overview_81" class="xm-text f-bold " data-type="text" data-id="90db5d0fcd"  style="color:#333333;font-size:0.234375rem;display:inline-block;text-align:center;width:100%;line-height:1.2;margin:0.21484375rem 0rem 0.078125rem 0rem">Grade simétrica</span>
 
@@ -607,7 +604,7 @@ espaços reduzidos.</span>
 
 <div class="  lazy" data-type="bg" data-id="6a1dbb9777" data-background-image="" style="width:2.2890625rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;padding:0rem 0.00390625rem 0rem 0rem;margin:0rem 0.4609375rem 0rem 0rem;flex-direction:column;align-items:center">
 
-<img style="display:block;height:1.953125rem;width:1.953125rem;background-color:transparent" class="  lazy" data-id="e9b1643b95" src="./assets/media/12.png" />
+<img style="display:block;height:1.953125rem;width:1.953125rem;background-color:transparent" class="  lazy" data-id="e9b1643b95" src="./assets/media/img10.png" />
 
 <span data-key="overview_92" class="xm-text f-medium " data-type="text" data-id="2947f96537" style="color:#333333cc;font-size:0.09375rem;display:inline-block;text-align:center;width:100%;line-height:1.2;margin:0.18359375rem 0rem 0rem 0rem">Passo 1</span>
 
@@ -665,7 +662,7 @@ Combinando duas tecnologias de filtro: carga eletrostática e filtragem mecânic
 
 <div class="  lazy" data-type="bg" data-id="d6ecf7ab8e" data-background-image="" style="width:3.46875rem;height:auto;box-sizing:border-box;display:block;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;padding:0.15234375rem 0.4296875rem 0.14453125rem 0.8125rem;margin:0rem 0rem 0rem 0.06640625rem;background-color:#e8f3f4">
 
-<img style="display:block;height:2.0859375rem;width:2.0859375rem;background-color:transparent" class="  lazy" data-id="694b333494" src="./assets/media/icon14.png" />
+<img style="display:block;height:2.0859375rem;width:2.0859375rem;background-color:transparent" class="  lazy" data-id="694b333494" src="./assets/media/img14.png" />
 </div>
 
 <div class="  lazy" data-type="bg" data-id="793b6d46e4" data-background-image="" style="width:3.46875rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;background-color:#edece9;padding:0.0859375rem 0.14453125rem 0.0859375rem 0.14453125rem;justify-content:center;align-items:center;text-align:center">
@@ -782,7 +779,7 @@ Combinando duas tecnologias de filtro: carga eletrostática e filtragem mecânic
 
 <span data-key="note_9" class="xm-text  " data-type="text" data-id="c48493d5d5" style="color:#818181;font-size:0.09375rem;display:inline-block;text-align:left;width:7.03125rem;line-height:1.2;margin:0rem 0rem 0.1484375rem 0rem">* Amazon, Alexa e todos os logotipos relacionados são marcas registradas da Amazon.com, Inc. ou de suas afiliadas.</span>
 
-<span data-key="note_10" class="xm-text  " data-type="text" data-id="a8bcabcd8c" style="color:#818181;font-size:0.09375rem;display:inline-block;text-align:left;width:7.03125rem;line-height:1.2;margin:0rem 0rem 0.1484375rem 0rem">* O Google Assistant e o Amazon Alexa não estão disponíveis em determinados idiomas e países. A disponibilidade dos serviços varia de acordo com o país e o idioma. </span>
+<span data-key="note_10" class="xm-text  " data-type="text" data-id="a8bcabcd8c" style="color:#818181;font-size:0.09375rem;display:inline-block;text-align:left;width:7.03125rem;line-height:1.2;margin:0rem 0rem 0.1484375rem 0rem">* O Google Assistant e o Amazon Alexa não estão disponíveis em determinados idiomas e países. A disponibilidade dos serviços varia de acordo com o país e o idioma.</span>
 </div>
 </div>
 </div>
