--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 
 <div class="  lazy" data-type="bg" data-id="ee9ed6ea00" data-background-image="" style="width:auto;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;align-items:baseline;margin:0.9rem 0rem 0rem 0.171875rem">
 
+<span data-key="ksp_6" class="xm-text f-regular " data-type="text"  data-id="a28eb1e1a4" style="color:#ffffff;font-size:0.1171875rem;display:inline-block;text-align:left;width:100%;line-height:1.2">Retém até</span>
+
 <span data-key="ksp_4" class="xm-text f-regular " data-type="text" data-id="fca70a31ba" style="color:#ffffff;font-size:0.28125rem;display:inline;text-align:left;width:max-content;line-height:1.2">99.97</span>
 
 <span data-key="ksp_5" class="xm-text f-regular " data-type="text" data-id="d599690ab0" style="color:#ffffff;font-size:0.09375rem;display:inline-block;text-align:left;width:100%;line-height:1.2">%</span>
@@ -201,7 +203,7 @@ fornecendo 6000L de ar puro por minuto*. Os poderosos níveis de velocidades de 
 
 <img style="display:block;height:0.4140625rem;width:0.4140625rem;background-color:transparent;margin:0rem 0rem 0rem 0.00390625rem" class="  lazy" data-id="134da1a344" src="./assets/media/icon01.png" />
 
-<span data-key="overview_21" class="xm-text f-light " data-type="text" data-id="eef6c363c4" style="color:#181818cc;font-size:0.15rem;display:inline-block;text-align:center;width:100%;line-height:1.0;margin:0.3rem 0rem 0rem 0rem;">Pelos de pet</span>
+<span data-key="overview_21" class="xm-text f-light " data-type="text" data-id="eef6c363c4" style="color:#181818cc;font-size:0.1171875rem;display:inline-block;text-align:center;width:100%;line-height:1.3;margin:0.109375rem 0rem 0rem 0rem">Pelos de pet</span>
 </div>
 
 <div class="  lazy" data-type="bg" data-id="69385c972e" data-background-image="" style="width:1.015625rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;flex-direction:column;align-items:center">
@@ -229,7 +231,7 @@ fornecendo 6000L de ar puro por minuto*. Os poderosos níveis de velocidades de 
 
 <img style="display:block;height:0.4140625rem;width:0.4140625rem;background-color:transparent;margin:0rem 0rem 0rem 0.00390625rem" class="  lazy" data-id="a20547ee2d" src="./assets/media/icon05.png"/>
 
-<span data-key="overview_25" class="xm-text f-light " data-type="text" data-id="2ecdf507fb" style="color:#181818cc;font-size:2.0rem;display:inline-block;text-align:center;width:100%;line-height:1.3;margin:0.5rem 0rem 0rem 0rem">Células mortas</span>
+<span data-key="overview_25" class="xm-text f-light " data-type="text" data-id="2ecdf507fb" style="color:#181818cc;font-size:0.1171875rem;display:inline-block;text-align:center;width:100%;line-height:1.3;margin:0.109375rem 0rem 0rem 0rem">Células mortas</span>
 </div>
 
 <div class="  lazy" data-type="bg" data-id="6b675637ec" data-background-image="" style="width:1.015625rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;flex-direction:column;align-items:center">
