--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <title>Xiaomi Smart Air Purifier 4 Lite - Xiaomi Global Official</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://s01.appmifile.com/sgp/spps_files/product/2.1.23/pc/xiaomi-smart-air-purifier-4-lite/css/main.css" rel="stylesheet">
+    <link href="./assets/css/main.css" rel="stylesheet">
     
-
     <style>
         #truste-consent-required {
             display: none
@@ -144,11 +143,11 @@ partículas de 0,3μm*</span>
 
 <span data-key="overview_6" class="xm-text  " data-type="text" data-id="35124497f2" style="color:#ffffff;font-size:0.09375rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:0.95rem;left:3.53125rem;line-height:1.2">Fumaça</span>
 
-<span data-key="overview_5" class="xm-text  " data-type="text" data-id="8af0a6bf8d" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:1.1328125rem;left:5.640625rem;line-height:1.2">Poeira</span>
+<span data-key="overview_5" class="xm-text  " data-type="text" data-id="8af0a6bf8d" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:1.16rem;left:5.640625rem;line-height:1.2">Poeira</span>
 
-<span data-key="overview_4" class="xm-text  " data-type="text" data-id="1cb7080d5f" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:1.859375rem;left:3.8046875rem;line-height:1.2">Pólen</span>
+<span data-key="overview_4" class="xm-text  " data-type="text" data-id="1cb7080d5f" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:1.859375rem;left:3.84rem;line-height:1.2">Pólen</span>
 
-<span data-key="overview_3" class="xm-text  " data-type="text" data-id="853c96750b" style="color:#ffffff;font-size:0.125rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:2.70rem;left:2.40625rem;line-height:1.2">Pelos de pets</span>
+<span data-key="overview_3" class="xm-text  " data-type="text" data-id="853c96750b" style="color:#ffffff;font-size:0.115rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:2.73rem;left:2.40625rem;line-height:1.0">Pelos de pets</span>
 
 <span data-key="overview_2" class="xm-text  " data-type="text" data-id="c120e3bc47" style="color:#ffffff;font-size:0.110rem;display:inline-block;text-align:center;width:0.6rem;position:absolute;top:0.78rem;left:1.85rem;line-height:1.2">Odores da cozinha</span>
 </div>
