--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Respire um ar fresco o tempo todo.</span>
 
 <span data-key="overview_36" class="xm-text f-bold " data-type="text" data-id="c34561a126" style="color:#000;font-size:0.234375rem;display:inline-block;text-align:center;width:5.46875rem;line-height:1">Um único filtro dura até 1 ano</span>
 
-<span data-key="overview_37" class="xm-text f-bold " data-type="text" data-id="b33b35e788" style="color:#000;font-size:0.234375rem;display:inline-block;text-align:center;width:5.46875rem;line-height:1;margin:0.0390625rem 0rem 0rem 0rem">Ar limpo todos os dias com um filtro de longa duração</span>
+<span data-key="overview_37" class="xm-text f-bold " data-type="text" data-id="b33b35e788" style="color:#000;font-size:0.234375rem;display:inline-block;text-align:center;line-height:1;margin:0.0390625rem 0rem 0rem 0rem">Ar limpo todos os dias com um filtro de longa duração</span>
 
 <span data-key="overview_38" class="xm-text f-regular " data-type="text" data-id="b27876ce11" style="color:#000;font-size:0.09375rem;display:inline-block;text-align:center;width:5.46875rem;line-height:1.2;margin:0.1953125rem 0rem 0rem 0rem">O filtro de alta eficiência possui uma grande área de carvão ativado de alta qualidade que pode durar até 12 meses,
 eliminando a necessidade de substituição frequente do filtro.</span>
