--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
     <title>Xiaomi Smart Air Purifier 4 Lite - Xiaomi Global Official</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./assets/css/main.css" rel="stylesheet">
-    
-    <style>
-        #truste-consent-required {
-            display: none
-        }
-    </style>
-
 </head>
 
 <body>
@@ -29,7 +22,7 @@
 
 <div class="  lazy" data-type="bg" data-id="0d86e12a71" data-background-image="" style="width:auto;height:auto;box-sizing:border-box;display:block;position:static;font-size:0;background-size:cover;background-repeat:no-repeat">
 
-<span data-key="name_1" class="xm-text f-bold " data-type="text" data-id="ef51916323" style="color:#000000;font-size:0.28125rem;display:inline;text-align:left;width:100%;line-height:1.3;margin:0rem 0rem 0rem 0.0703125rem;font-weight:bold;word-spacing:-2px">Purificador de Ar Inteligente <img style="display:inline;height:0.1953125rem;width:0.9rem;background-color:transparent;margin:0.00390625rem 0rem 0rem 0rem" class="  lazy" data-id="749077d214" src="./assets/media/logo.png"/> 4 Lite</span>
+<span data-key="name_1" class="xm-text f-bold " data-type="text" data-id="ef51916323" style="color:#000000;font-size:0.28125rem;display:inline;text-align:left;width:100%;line-height:1.3;margin:0rem 0rem 0rem 0.0703125rem;font-weight:bold;word-spacing:-2px">Purificador de Ar Inteligente <img style="display:inline;height:0.1553125rem;width:0.9rem;background-color:transparent;margin:0.00390625rem 0rem 0rem 0rem" class="  lazy" data-id="749077d214" src="./assets/media/logo.png"/> 4 Lite</span>
 </div>
 </div>
 
@@ -78,7 +71,7 @@ partículas de 0,3μm*</span>
 
 <span data-key="ksp_7" class="xm-text f-regular " data-type="text" data-id="183bdb4be4" style="color:#333333;font-size:0.125rem;display:inline-block;text-align:left;width:1.015625rem;line-height:1.25;margin:0.2578125rem 0rem 0rem 0.15625rem">Área de base menor que uma</span>
 
-<div class="  lazy" data-type="bg" data-id="5eabff23af" data-background-image="" style="width:1.171875rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;padding:0rem 0rem 0rem 0.15625rem;align-items:baseline;margin:0.0390625rem 0rem 0rem 0rem">
+<div class="  lazy" data-type="bg" data-id="5eabff23af" data-background-image="" style="width:1.171875rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;padding:0rem 0rem 0rem 0.12rem;align-items:baseline;margin:0.0390625rem 0rem 0rem 0rem">
 
 
 <span data-key="ksp_9" class="xm-text f-regular " data-type="text" data-id="910db30eff" style="color:#333333;font-size:0.125rem;display:inline-block;text-align:left;width:0.35rem;margin:0rem 0rem 0rem 0.0390625rem;line-height:1.2">folha</span>
@@ -137,7 +130,7 @@ partículas de 0,3μm*</span>
 
 <span data-key="overview_9" class="xm-text  " data-type="text" data-id="747c954ddc" style="color:#ffffff;font-size:0.1171875rem;display:inline-block;text-align:center;width:0.6rem;position:absolute;top:2.0703125rem;left:0.62rem;line-height:1.2">Odores dos pets</span>
 
-<span data-key="overview_8" class="xm-text  " data-type="text" data-id="c11aa81b20" style="color:#ffffff;font-size:0.1171875rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:1.77rem;left:1.92rem;line-height:1.2">Produtos Quimicos</span>
+<span data-key="overview_8" class="xm-text  " data-type="text" data-id="c11aa81b20" style="color:#ffffff;font-size:0.1171875rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:1.77rem;left:1.92rem;line-height:1.2">Produtos Químicos</span>
 
 <span data-key="overview_7" class="xm-text  " data-type="text" data-id="cd7d242da0" style="color:#ffffff;font-size:0.09975rem;display:inline-block;text-align:center;width:0.4296875rem;position:absolute;top:2.3rem;left:5.2634375rem;line-height:1.2">Células mortas</span>
 
@@ -166,7 +159,7 @@ partículas de 0,3μm*</span>
 
 <span data-key="overview_13" class="xm-text f-light " data-type="text" data-id="6cec0cf4ff" style="color:#000000b3;font-size:0.09375rem;display:inline-block;text-align:center;width:100%;line-height:1.33;margin:0.13671875rem 0rem 0rem 0rem">O Purificador de Ar Inteligente Xiaomi 4 Lite entrega uma taxa alta de ar limpo
 que captura partículas em até 360m³/h*, fornecendo 6000L de ar puro por minuto*.
-Os poderosos níveis de velocidades de purificação, mantêm o ar da sua casa mais limpo por mais tempo.</span>
+Os poderosos níveis de velocidades de purificação e mantêm o ar da sua casa mais limpo por mais tempo.</span>
 </div>
 
 <div class="  lazy" data-type="bg" data-id="2d409286f2" data-background-image="" style="width:auto;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;flex-wrap:nowrap;justify-content:center;margin:0.2734375rem 0rem 0rem 0rem">
@@ -530,7 +523,7 @@ Verifique a qualidade do ar com o LED indicador através de 4 cores e aproveite 
 <span data-key="overview_73" class="xm-text f-bold " data-type="text" data-id="3a0f3c772d" style="color:#333333;font-size:0.234375rem;display:inline-block;text-align:center;width:5.46875rem;margin:0.0390625rem 0rem 0rem 0rem;line-height:1">Mantenha suas noites tranquilas</span>
 
 <span data-key="overview_74" class="xm-text f-regular " data-type="text" data-id="4517417129" style="color:#333333cc;font-size:0.09375rem;display:inline-block;text-align:center;width:5.46875rem;margin:0.234375rem 0rem 0rem 0rem;line-height:1.3">O modo noturno desliga a tela LED e reduz o ruído para 33,4 dB(A)*.
-Durma bem àa noite sem incômodos.</span>
+Durma bem à noite sem incômodos.</span>
 </div>
 </div>
 
@@ -556,9 +549,8 @@ são necessários para 24 horas de uso ininterrupto*.</span>
     
 <div class="  lazy" data-type="bg" data-id="8388e7eca3" data-background-image="" style="width:auto;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;flex-direction:column;align-items:flex-end;padding:1.6328125rem 0rem 0rem 0rem">
 
-<span data-key="overview_78" class="xm-text f-bold " data-type="text" data-id="79c99e7f1d" style="color:#333333;font-size:0.234375rem;display:inline-block;text-align:left;width:3.525rem;line-height:1.2;margin:0rem 0.99609375rem 0rem 0rem">Adeus bordas arredondadas, olá bordas quadradas e elegantes com um </span>
-
-<!--<span data-key="overview_79" class="xm-text f-bold " data-type="text" data-id="5417130140" style="color:#333333;font-size:0.234375rem;display:inline-block;text-align:left;width:3.125rem;line-height:1.2;margin:0rem 0.99609375rem 0rem 0rem">olá bordas quadradas e elegantes com um estilo único</span>-->
+<span data-key="overview_78" class="xm-text f-bold " data-type="text" data-id="79c99e7f1d" style="color:#333333;font-size:0.234375rem;display:inline-block;text-align:left;width:3.725rem;line-height:1.2;margin:0rem 0.99609375rem 0rem 0rem">Adeus bordas arredondadas,
+olá bordas quadradas e elegantes com um estilo único </span>
 
 <span data-key="overview_80" class="xm-text f-regular " data-type="text" data-id="9a412d352e" style="color:#333333cc;font-size:0.09375rem;display:inline-block;text-align:left;width:3.525rem;line-height:1.3;margin:0.2734375rem 0.99609375rem 0rem 0rem">Design quadrado com bordas chanfradas de corte limpo.
 Dê um toque pessoal à sua casa. </span>
@@ -652,7 +644,7 @@ espaços reduzidos.</span>
 
 <span data-key="overview_99" class="xm-text f-light " data-type="text" data-id="4266dcf438" style="color:#0f161acc;font-size:0.09375rem;display:inline-block;text-align:center;width:100%;margin:0.1953125rem 0rem 0rem 0rem;line-height:1.33;font-weight:300">Comparado a um filtro HEPA convencional, o filtro de alta eficiência da Xiaomi permite que o purificador de ar gere menos ruído, consuma menos energia com mais fluxo de ar passando pelo filtro enquanto mantém a eficiência de limpeza. 
 
-Combinando duas tecnologias de filtro: carga eletrostática e filtragem mecânica, para reter 99,97% das partículas no ar de 0,3 micrômetros de tamanho como poeira, pólen, pelos de animais, fumaça e partículas minúsculas PM 2,5. </span>
+Combinando duas tecnologias de filtro: carga eletrostática e filtragem mecânica, para reter 99,97% das partículas no ar de 0,3 micrômetros de tamanho como poeira, pólen, pelos de animais, fumaça e partículas minúsculas PM 2,5.</span>
 </div>
 
 <div class="  lazy" data-type="bg" data-id="8bd3a52d4a" data-background-image="" style="width:7.0390625rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;min-width:0.15625rem;margin:0.25rem 0rem 0rem 0rem;flex-wrap:wrap;justify-content:space-between">
@@ -735,7 +727,7 @@ o que gerará mais ruído.</span>
 
 <div class="  lazy" data-type="bg" data-id="712ce5a2ba" data-background-image="" style="width:3.46875rem;height:auto;box-sizing:border-box;display:block;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;background-color:#e8f3f4;padding:0.0859375rem 0.14453125rem 0.0703125rem 0.14453125rem;justify-content:center;align-items:center;text-align:center">
 
-<span data-key="overview_111" class="xm-text f-light " data-type="text" data-id="71ff8fea4c" style="color:#000000cc;font-size:0.1171875rem;display:inline;text-align:center;width:100%;line-height:1.3;margin:0rem 0rem 0rem 0.0390625rem">O filtro de fibras menos densas facilita a passagem do ar mesmo em alta velocidade, o que resulta em um ruído muito menor.</span>
+<span data-key="overview_111" class="xm-text f-light " data-type="text" data-id="71ff8fea4c" style="color:#000000cc;font-size:0.117rem;display:inline;text-align:center;width:100%;line-height:1.3;margin:0rem 0rem 0rem 0.0390625rem">O filtro de fibras menos densas facilita a passagem do ar mesmo em alta velocidade, o que resulta em um ruído muito menor.</span>
 </div>
 
 <div class="  lazy" data-type="bg" data-id="54e9891ca3" data-background-image="" style="width:3.46875rem;height:auto;box-sizing:border-box;display:flex;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;background-color:#edece9;padding:0.0859375rem 0.14453125rem 0.0859375rem 0.14453125rem;justify-content:center;align-items:center;text-align:center">
@@ -760,12 +752,12 @@ o que gerará mais ruído.</span>
 
 <div class="  lazy" data-type="bg" data-id="a92263484f" data-background-image="" style="width:3.46875rem;height:auto;box-sizing:border-box;display:block;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;background-color:#ffffff;padding:0.1015625rem 0.14453125rem 0.203125rem 0.14453125rem;justify-content:center;align-items:center;border-radius:0rem 0rem 0.3125rem 0.3125rem;text-align:center">
 
-<span data-key="overview_106" class="xm-text f-light " data-type="text" data-id="b359e43143" style="color:#000000cc;font-size:0.09375rem;display:inline;text-align:center;width:100%;line-height:1.16;margin:0rem 0rem 0rem 0.0390625rem">O filtro de fibras menos densas facilita a passagem do ar mesmo em alta velocidade, o que resulta em um ruído muito menor.</span>
+<span data-key="overview_106" class="xm-text f-light " data-type="text" data-id="b359e43143" style="color:#000000cc;font-size:0.116rem;display:inline;text-align:center;width:100%;line-height:1.16;margin:0rem 0rem 0rem 0.0390625rem">O filtro de fibras menos densas facilita a passagem do ar mesmo em alta velocidade, o que resulta em um ruído muito menor.</span>
 </div>
 
 <div class="  lazy" data-type="bg" data-id="160c212207" data-background-image="" style="width:3.46875rem;height:auto;box-sizing:border-box;display:block;position:static;font-size:0;background-size:cover;background-repeat:no-repeat;background-color:#e8f3f4;padding:0.1015625rem 0.09765625rem 0.203125rem 0.09765625rem;justify-content:center;align-items:center;border-radius:0rem 0rem 0.3125rem 0.3125rem;text-align:center">
 
-<span data-key="overview_113" class="xm-text f-light " data-type="text" data-id="80e1348888" style="color:#000000cc;font-size:0.09375rem;display:inline;text-align:center;width:100%;line-height:1.16;margin:0rem 0rem 0rem 0.0390625rem">Com um filtro de fibras menos denso é possível consumir menos energia para obter o mesmo volume de ar limpo.</span>
+<span data-key="overview_113" class="xm-text f-light " data-type="text" data-id="80e1348888" style="color:#000000cc;font-size:0.116rem;display:inline;text-align:center;width:100%;line-height:1.16;margin:0rem 0rem 0rem 0.0390625rem">Com um filtro de fibras menos denso é possível consumir menos energia para obter o mesmo volume de ar limpo.</span>
 </div>
 </div>
 
